# zendesk-toolkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCE.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: attachments_flow.py  help_center_article_flow.py  incremental_export_cursor.py  search_helpers.py  side_conversation_child_ticket.py
tests/: conftest.py  test_client.py  test_help_center_articles.py  test_help_center_attachments.py  test_help_center_search.py  test_help_center_translations.py  test_pagination.py  test_support_tickets.py
zendesk_toolkit/: __init__.py  client.py  errors.py  pagination.py
zendesk_toolkit/help_center/: __init__.py  articles.py  attachments.py  categories.py  comments.py  labels.py  locales.py  search.py  sections.py  translations.py  user_segments.py  votes.py
zendesk_toolkit/support/: __init__.py  comments.py  custom_fields.py  groups.py  macros.py  organizations.py  search.py  side_conversations.py  tickets.py  uploads.py  users.py  views.py
